@@ -252,6 +252,7 @@ void PhysicsList::SetCutForProton(double cut)
 #include "NuBeam.hh"
 
 #include "G4OpticalPhysics.hh"
+#include "G4SynchrotronRadiation.hh"
 
 #include "G4StepLimiter.hh"
 
@@ -363,6 +364,7 @@ void PhysicsList::ConstructProcess()
 {
 	AddTransportation();
 	int fastmcMode = gemcOpt.optMap["FASTMCMODE"].arg;
+	int synrad = gemcOpt.optMap["SYNRAD"].arg;
 
 	if(fastmcMode < 2) {
 		G4ProcessTable* processTable = G4ProcessTable::GetProcessTable();
@@ -375,6 +377,12 @@ void PhysicsList::ConstructProcess()
 
 		for(size_t i=0; i<g4HadronicPhysics.size(); i++)
 			g4HadronicPhysics[i]->ConstructProcess();
+
+		// sync radiation
+		G4SynchrotronRadiation* fSync = nullptr;
+
+		if (synrad) fSync = new G4SynchrotronRadiation();
+		//G4AutoDelete::Register(fSync);
 
 		 auto theParticleIterator = GetParticleIterator();
 
@@ -394,7 +402,22 @@ void PhysicsList::ConstructProcess()
 				if(verbosity > 2)
 					cout << "   >  Adding Step Limiter for " << pname << endl;
 
-				pmanager->AddProcess(new G4StepLimiter,       -1,-1,3);
+				pmanager->AddProcess(new G4StepLimiter,       -1,-1, 3);
+			}
+
+			// G4SynchrotronRadiation if requested
+			if (synrad) {
+
+				if (pname == "e-") {
+					//electron
+					pmanager->AddProcess(fSync,               -1,-1, 4);
+					pmanager->AddProcess(new G4StepLimiter,   -1,-1, 5);
+
+				} else if (pname == "e+") {
+					//positron
+					pmanager->AddProcess(fSync,              -1,-1, 5);
+					pmanager->AddProcess(new G4StepLimiter,  -1,-1, 6);
+				}
 			}
 
 			if(muonRadDecay){
