@@ -378,8 +378,8 @@ int sensitiveDetector::processID(string procName)
 	if(procName == "positronNuclear")       return 9;
 	if(procName == "CoulombScat")           return 10;
 	if(procName == "Cerenkov")              return 11;
-	if(procName == "Scintillation")		return 12;
-	if(procName == "SynRad")           	return 13;
+	if(procName == "Scintillation")			return 12;
+	if(procName == "SynRad")           		return 13;
 	if(procName == "hadElastic")            return 20;
 	if(procName == "hBrems")                return 21;
 	if(procName == "hIoni")                 return 22;
